# ChangeLog for media-sound/jack-audio-connection-kit
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/jack-audio-connection-kit/ChangeLog,v 1.105 2008/01/30 19:43:10 aballier Exp $

*jack-audio-connection-kit-0.109.2 (30 Jan 2008)

  30 Jan 2008; Alexis Ballier <aballier@gentoo.org>
  +jack-audio-connection-kit-0.109.2.ebuild:
  bump

*jack-audio-connection-kit-0.109.0 (14 Jan 2008)

  14 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
  +jack-audio-connection-kit-0.109.0.ebuild:
  Version bump, remove jack-tmpfs as /dev/shm is the default path in this
  release.

  06 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
  jack-audio-connection-kit-0.103.0.ebuild:
  Add missing samplerate dependency (bug #202162) for netjack. Fix minor syns
  in ebuilds.

  06 Jan 2008; Diego Pettenò <flameeyes@gentoo.org>
  jack-audio-connection-kit-0.99.0-r3.ebuild:
  Remove all keywords but ~mips from 0.99.0-r3 version.

  19 Nov 2007; Diego Pettenò <flameeyes@gentoo.org>
  -files/jack-audio-connection-kit-0.80.0-alsalib-fix.patch,
  -files/jack-audio-connection-kit-0.100.0-coreaudio.patch,
  -files/jack-audio-connection-kit-0.100.0-driver_interface.patch,
  -files/jack-audio-connection-kit-doc-option.patch,
  -files/jack-audio-connection-kit-mmap_complex.patch,
  -jack-audio-connection-kit-0.99.0-r1.ebuild,
  -jack-audio-connection-kit-0.99.0-r2.ebuild,
  -jack-audio-connection-kit-0.101.1-r1.ebuild,
  -jack-audio-connection-kit-0.102.20.ebuild:
  Cleanup old ebuilds and patches.

  08 Oct 2007; Tom Gall <tgall@gentoo.org>
  +jack-audio-connection-kit-0.103.0-ppc64fix.patch:
  fix for bug #195058 on ppc64

  07 Sep 2007; Jeroen Roovers <jer@gentoo.org>
  jack-audio-connection-kit-0.103.0.ebuild:
  Stable for HPPA (bug #186928).

  03 Sep 2007; Jeroen Roovers <jer@gentoo.org>
  jack-audio-connection-kit-0.103.0.ebuild:
  Marked ~hppa for now (bug #186928).

  25 Aug 2007; Steve Dibb <beandog@gentoo.org>