@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/jack-audio-connection-kit
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/jack-audio-connection-kit/ChangeLog,v 1.105 2008/01/30 19:43:10 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/jack-audio-connection-kit/ChangeLog,v 1.106 2008/05/20 09:14:05 drac Exp $
+
+*jack-audio-connection-kit-0.109.2-r1 (20 May 2008)
+
+  20 May 2008; Samuli Suominen <drac@gentoo.org>
+  +jack-audio-connection-kit-0.109.2-r1.ebuild:
+  Revision bump to remove USE portaudio wrt #222841.
 
 *jack-audio-connection-kit-0.109.2 (30 Jan 2008)
 
